# Shear_Cali

./: AGENTS.md  README.md  pyproject.toml
configs/: sample_shape_posterior.ini  train_shape_flow.ini
notebooks/: shape_flow_demo.ipynb
scripts/: sample_shape_posterior.py  show_mcmc_figure.py  train_shape_flow.py
shape_flow/: __init__.py  data.py  likelihood.py  model.py  posterior.py  scaling.py  train.py  utils.py
tests/: test_cli_config.py  test_likelihood_shapes.py  test_posterior.py  test_scaling.py  test_utils.py
